[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Game/Player/PlayerSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Particles/blackSmoke00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/trench100free.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/NetworkedGame/Player/NPlayer.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Game/Player/HitBox.gd" type="Script" id=13]
[ext_resource path="res://Assets/Sounds/Game/Damage.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Sounds/Game/Death.wav" type="AudioStream" id=15]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 9.73698, 26.8535, 15.4751, 13.424, 30.6138, 6.22087, 47.3396, 8.54051, 47.9501, 15.3774, 54.1765, 25.7547, 49.0489, 37.1088, 50.0256, 52.98, 13.1554, 53.3463, 13.5217, 42.7248, 16.5738, 37.1088 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0996
height = 13.3975

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.8596, 15.1481 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.964844, 0.387492, 0.10553, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 20.0
scale = 0.1
color_ramp = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Nametag/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.431373, 0.431373, 0.431373, 0.501961 ), Color( 1, 1, 1, 1 ), Color( 0.431373, 0.431373, 0.431373, 0.501961 ), Color( 1, 1, 1, 1 ), Color( 0.431373, 0.431373, 0.431373, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 4 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, -8 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -32, -56 )
occluder = SubResource( 1 )

[node name="EnvironmentCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HitBox" type="KinematicBody2D" parent="." groups=[
"PlayerHitbox",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="PlayerSprite" parent="." instance=ExtResource( 1 )]

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 0, -24 )
emitting = false
amount = 32
lifetime = 1.5
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="Nametag" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 0, -64 )

[node name="Label" type="Label" parent="Nametag"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -9.5
margin_right = 128.0
margin_bottom = 9.5
custom_fonts/font = SubResource( 8 )
text = "Player 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootingDelay" type="Timer" parent="."]
one_shot = true

[node name="HitInvincibleDuration" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 9 )
anims/die = SubResource( 10 )
anims/invincible = SubResource( 11 )
[connection signal="timeout" from="ShootingDelay" to="." method="_on_ShootingDelay_timeout"]
[connection signal="timeout" from="HitInvincibleDuration" to="." method="_on_HitInvincibleDuration_timeout"]
[connection signal="finished" from="Death" to="." method="_on_Death_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
